--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"ip":"ajay23579.aternos.me",
+	"ip":"ajay23579.aternos.me:54591",
 	"port": "25565",
 	"name": "afkbot1",
 	"auto-night-skip":"true"
