--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"ip":"ajay23579.aternos.me",
-	"port": "28839",
+	"ip":"noiceeebro.aternos.me",
+	"port": "32417",
 	"name": "afkbot1",
 	"auto-night-skip":"true"
 }
